<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:settings="http://schemas.android.com/apk/res/org.lineageos.device.settings">

    <!-- Master Enable/Disable - Regular Switch (No Dependencies) -->
    <SwitchPreferenceCompat
        android:key="game_bar_enable"
        android:title="@string/game_bar_enable"
        android:summary="@string/game_bar_enable_summary"
        android:persistent="true"
        android:defaultValue="false" />

    <!-- Applications/Apps List Category - Right After Global Switch -->
    <PreferenceCategory
        android:key="game_bar_applications"
        android:title="@string/game_bar_applications" />

    <Preference
        android:key="game_bar_add_packages"
        android:icon="@drawable/ic_add"
        android:title="@string/add_app"
        android:summary="@string/game_bar_add_packages_summary"
        android:persistent="false" />

    <!-- Stats Display Category -->
    <PreferenceCategory
        android:title="@string/game_bar_stats_display">

        <SwitchPreferenceCompat
            android:key="game_bar_fps_enable"
            android:title="@string/game_bar_fps_enable"
            android:summary="@string/game_bar_fps_enable_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_temp_enable"
            android:title="@string/game_bar_temp_enable"
            android:summary="@string/game_bar_temp_enable_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_usage_enable"
            android:title="@string/game_bar_cpu_usage_enable"
            android:summary="@string/game_bar_cpu_usage_enable_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_clock_enable"
            android:title="@string/game_bar_cpu_clock_enable"
            android:summary="@string/game_bar_cpu_clock_enable_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_temp_enable"
            android:title="@string/game_bar_cpu_temp_enable"
            android:summary="@string/game_bar_cpu_temp_enable_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_enable"
            android:title="@string/game_bar_ram_enable"
            android:summary="@string/game_bar_ram_enable_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_usage_enable"
            android:title="@string/game_bar_gpu_usage_enable"
            android:summary="@string/game_bar_gpu_usage_enable_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_clock_enable"
            android:title="@string/game_bar_gpu_clock_enable"
            android:summary="@string/game_bar_gpu_clock_enable_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_temp_enable"
            android:title="@string/game_bar_gpu_temp_enable"
            android:summary="@string/game_bar_gpu_temp_enable_summary"
            android:persistent="true"
            android:defaultValue="false" />
    </PreferenceCategory>

    <!-- UI Customization Category -->
    <PreferenceCategory
        android:title="@string/game_bar_ui_customization">

        <ListPreference
            android:key="game_bar_position"
            android:title="@string/game_bar_position"
            android:summary="@string/game_bar_position_summary"
            android:persistent="true"
            android:defaultValue="top_left"
            android:entries="@array/game_bar_position_entries"
            android:entryValues="@array/game_bar_position_values" />

        <Preference
            android:key="game_bar_reset_position"
            android:title="@string/game_bar_reset_position"
            android:summary="@string/game_bar_reset_position_summary"
            android:persistent="false" />

        <ListPreference
            android:key="game_bar_split_mode"
            android:title="@string/game_bar_split_mode"
            android:summary="@string/game_bar_split_mode_summary"
            android:persistent="true"
            android:defaultValue="stacked"
            android:entries="@array/game_bar_split_mode_entries"
            android:entryValues="@array/game_bar_split_mode_values" />

        <ListPreference
            android:key="game_bar_format"
            android:title="@string/game_bar_format"
            android:summary="@string/game_bar_format_summary"
            android:persistent="true"
            android:defaultValue="full"
            android:entries="@array/game_bar_format_entries"
            android:entryValues="@array/game_bar_format_values" />

        <org.lineageos.device.settings.preferences.CustomSeekBarPreference
            android:key="game_bar_text_size"
            android:title="@string/game_bar_text_size"
            android:summary="@string/game_bar_text_size_summary"
            android:persistent="true"
            android:defaultValue="16"
            android:max="24"
            settings:min="10"
            settings:interval="1" />

        <org.lineageos.device.settings.preferences.CustomSeekBarPreference
            android:key="game_bar_background_alpha"
            android:title="@string/game_bar_background_alpha"
            android:summary="@string/game_bar_background_alpha_summary"
            android:persistent="true"
            android:defaultValue="128"
            android:max="255"
            settings:min="0"
            settings:interval="1" />

        <org.lineageos.device.settings.preferences.CustomSeekBarPreference
            android:key="game_bar_corner_radius"
            android:title="@string/game_bar_corner_radius"
            android:summary="@string/game_bar_corner_radius_summary"
            android:persistent="true"
            android:defaultValue="16"
            android:max="32"
            settings:min="0"
            settings:interval="1" />

        <org.lineageos.device.settings.preferences.CustomSeekBarPreference
            android:key="game_bar_padding"
            android:title="@string/game_bar_padding"
            android:summary="@string/game_bar_padding_summary"
            android:persistent="true"
            android:defaultValue="12"
            android:max="24"
            settings:min="4"
            settings:interval="1" />

        <org.lineageos.device.settings.preferences.CustomSeekBarPreference
            android:key="game_bar_item_spacing"
            android:title="@string/game_bar_item_spacing"
            android:summary="@string/game_bar_item_spacing_summary"
            android:persistent="true"
            android:defaultValue="8"
            android:max="16"
            settings:min="0"
            settings:interval="1" />

        <ListPreference
            android:key="game_bar_title_color"
            android:title="@string/game_bar_title_color"
            android:summary="@string/game_bar_title_color_summary"
            android:persistent="true"
            android:defaultValue="#FFFFFF"
            android:entries="@array/game_bar_color_entries"
            android:entryValues="@array/game_bar_color_values" />

        <ListPreference
            android:key="game_bar_value_color"
            android:title="@string/game_bar_value_color"
            android:summary="@string/game_bar_value_color_summary"
            android:persistent="true"
            android:defaultValue="#4CAF50"
            android:entries="@array/game_bar_color_entries"
            android:entryValues="@array/game_bar_color_values" />

        <ListPreference
            android:key="game_bar_update_interval"
            android:title="@string/game_bar_update_interval"
            android:summary="@string/game_bar_update_interval_summary"
            android:persistent="true"
            android:defaultValue="1000"
            android:entries="@array/game_bar_update_interval_entries"
            android:entryValues="@array/game_bar_update_interval_values" />
    </PreferenceCategory>

    <!-- Gestures Category -->
    <PreferenceCategory
        android:title="@string/game_bar_gestures">

        <SwitchPreferenceCompat
            android:key="game_bar_single_tap_toggle"
            android:title="@string/game_bar_single_tap_toggle"
            android:summary="@string/game_bar_single_tap_toggle_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_doubletap_capture"
            android:title="@string/game_bar_doubletap_capture"
            android:summary="@string/game_bar_doubletap_capture_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_longpress_enable"
            android:title="@string/game_bar_longpress_enable"
            android:summary="@string/game_bar_longpress_enable_summary"
            android:persistent="true"
            android:defaultValue="false" />

        <ListPreference
            android:key="game_bar_longpress_timeout"
            android:title="@string/game_bar_longpress_timeout"
            android:summary="@string/game_bar_longpress_timeout_summary"
            android:persistent="true"
            android:defaultValue="1000"
            android:entries="@array/game_bar_longpress_timeout_entries"
            android:entryValues="@array/game_bar_longpress_timeout_values"
            android:dependency="game_bar_longpress_enable" />
    </PreferenceCategory>

    <!-- Data Capture Category -->
    <PreferenceCategory
        android:title="@string/game_bar_data_capture">

        <Preference
            android:key="game_bar_capture_start"
            android:title="@string/game_bar_capture_start"
            android:summary="@string/game_bar_capture_start_summary"
            android:persistent="false" />

        <Preference
            android:key="game_bar_capture_stop"
            android:title="@string/game_bar_capture_stop"
            android:summary="@string/game_bar_capture_stop_summary"
            android:persistent="false" />

        <Preference
            android:key="game_bar_capture_export"
            android:title="@string/game_bar_capture_export"
            android:summary="@string/game_bar_capture_export_summary"
            android:persistent="false" />
    </PreferenceCategory>

</PreferenceScreen>
